Fix:/ modifica archivo AdministracionController.php, agrega prefijo v1 al path, cambia tipo de dato requerido en metodo actualizarEstado(), de Integer a String.
